Fixed the css layout issue on cart page and revisited the product detail page.
Fixed the css layout issue on cart page and revisited the product
detail page.

--- a/upmc-pure/stylesheets/cart.css
+++ b/upmc-pure/stylesheets/cart.css
@@ -237,7 +237,7 @@ ul {
 
 li {
   color: #111;
-  display: inline-block;
+  /*display: inline-block;*/
   padding: 0.625rem 0;
 }
 
