--- a/upmc-pure/stylesheets/category.css
+++ b/upmc-pure/stylesheets/category.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Muli");
 
 .main-font-style {
-  font-family: "Helvetica Neue-Medium","Arial";
+  font-family: 'Muli', sans-serif;
   font-size: 120% !important;
   text-align: center;
   margin: 15px 0px 15px 0px;
