--- a/upmc-pure/stylesheets/product-detail.css
+++ b/upmc-pure/stylesheets/product-detail.css
@@ -26,6 +26,12 @@
     /*padding-left:2rem;*/
 /*}*/
 
+#purchase-option input{
+    width:auto !important;
+    margin-right:0.5rem;
+}
+
+
 
 button,
 img,
@@ -3296,7 +3302,7 @@ table.hover tr:nth-of-type(even):hover {
     display: block;
     padding: 1.25rem 1.5rem;
     line-height: 1;
-    font-size: 12px;
+    font-size: 1.5rem;
     color: #58075a
 }
 .tabs-title>a:focus,
