--- a/upmc-pure/stylesheets/result.css
+++ b/upmc-pure/stylesheets/result.css
@@ -48,7 +48,7 @@
 /*}*/
 
 p {
-  font-family: "Helvetica Neue-Medium","Arial";
+  font-family: 'Muli', sans-serif;
   font-size: 110%;
 }
 
@@ -64,7 +64,7 @@ p {
 }
 
 .main-font {
-  font-family: "Helvetica Neue-Medium","Arial";
+  font-family: 'Muli', sans-serif;
 }
 
 .path-margin-left {
@@ -123,7 +123,7 @@ p {
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-family: "Helvetica Neue-Medium","Arial";
+  font-family: 'Muli', sans-serif;
   font-size: 15px;
   color: #FFFFFF;
   display: block;
